deploy/gke/deny-netpol.yaml
---
# Used to deny ingress when not in use
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: gcp-dash
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
